# Junction-Open

./: .gitignore  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml  requirements-time.txt
.github/: CODEOWNERS
.github/workflows/: codeql.yml  demo.yml  lint.yml  update-codeql-badge.yml
calendars/: biztime.py  cutoffs.sample.yaml  cutoffs_after.yaml
demo/: demo_runner.py  demo_runner_timeaware.py
docs/: OPEN_CORE.md  pilot_loi.md  runbook_sftp_odata.md  sap_s4hana_mapping_cheatsheet.md
policies/: routing_rules_logistics.yaml
samples/: demo_cutoff_switch.csv  exceptions_queue_template.csv  payment_intent_logistics_complex_200.csv  payment_intent_logistics_complex_example.csv  payment_intent_logistics_crossborder_60.csv  payment_intent_logistics_edge_cases_40.csv  payment_intent_logistics_example.csv  payment_intent_logistics_template.csv
schemas/: payment_intent_v1.schema.json
scripts/: run_demo.sh
tools/: validate_csv.py
