[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "junction-open-cli"
version = "0.1.0"
description = "Junction (Open): time-aware AP rail recommendation demo CLI"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name="Junction Engine" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Office/Business :: Financial :: Accounting"
]
dependencies = [
  "PyYAML>=6.0",
  "holidays>=0.49",
]

[project.scripts]
junction-demo = "demo.demo_runner_timeaware:main"

[tool.setuptools]
packages = ["demo", "calendars", "tools"]
include-package-data = true

[tool.setuptools.package-data]
# ship the sample cutoff file so users can try instantly
calendars = ["*.yaml"]
# optional: include sample CSVs if you want
# demo = []
